# rfc

./: Cargo.toml
.cargo/: config.toml
bootloader/: Cargo.toml  flash.sh  memory.x
bootloader/.cargo/: config.toml
bootloader/src/: main.rs
flight-controller/: Cargo.toml  build.rs  flash-active.sh  flash-update.sh  memory copy.x  memory.x
flight-controller/src/: btn.rs  control.rs  crsf.rs  dshot.rs  gyro.rs  led.rs  main.rs  osd.rs  pids.rs  pwm.rs  usb.rs  util.rs
src/: btn.rs  crsf.rs  dshot.rs  gyro.rs  led.rs  main.rs  osd.rs  pids.rs  pwm.rs  util.rs
