[package]
name = "rfc"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { version="0.6.0", features = [ "defmt", "time-driver-any", "stm32g473ce", "rt", "memory-x", "unstable-pac", "exti", "dual-bank"]  }
embassy-executor = { version="0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version="0.5.1", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt-rtt = { version = "1.1.0", features = ["disable-blocking-mode"] }
defmt = "1.0.1"
panic-probe = "1.0.0"
embassy-sync = "0.8.0"
embassy-futures = "0.1.2"
embassy-usb = "0.6.0"
embassy-usb-logger = "0.6.0"
log = "0.4.29"
embedded-io-async = "0.7.0"
static_cell = { version = "2.1.1", features = ["nightly"] }
heapless = "0.9.2"
embedded-hal-async = "1.0.0"
embedded-hal = "1.0.0"
embassy-embedded-hal = "0.6.0"
dshot-frame = "0.2.1"
