[package]
name = "rfc-bootloader"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { version="0.6.0", features = [ "defmt", "time-driver-any", "stm32g473ce", "rt", "unstable-pac", "exti", "dual-bank"]  }
embassy-executor = { version="0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version="0.5.1", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = { version = "0.7.0", features = ["device"] }
defmt-rtt = { version = "1.1.0", features = ["disable-blocking-mode"] }
# defmt = "1.0.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
embassy-sync = "0.8.0"
# embassy-futures = "0.1.2"
# log = "0.4.29"
# embedded-io-async = "0.7.0"
# static_cell = { version = "2.1.1", features = ["nightly"] }
# heapless = "0.9.2"
# embedded-hal-async = "1.0.0"
# embedded-hal = "1.0.0"
embassy-embedded-hal = "0.6.0"
embassy-boot-stm32 = "0.8.0"
embassy-usb-dfu = { version = "0.3.0", features = ["cortex-m", "dfu"] }
embassy-usb = "0.6.0"
embedded-storage = "0.3.1"
embassy-futures = "0.1.2"
defmt = "0.3"
embassy-boot = { version = "0.7.0", features = ["defmt"] }

[profile.release]
opt-level = "z"        # "z" = smallest, "s" = small, 3 = fastest
debug = true
lto = true            # Link Time Optimization
codegen-units = 1      # Better optimization, slower compile
panic = "abort"        # No unwinding (huge size win)
